--- a/playbooks/roles/compute/tasks/main.yaml
+++ b/playbooks/roles/compute/tasks/main.yaml
@@ -4,7 +4,7 @@
   when: ansible_os_family == "RedHat"
 
 
-# misc task that should be setup afterwards
+# configure some software regardless of platform
 
 - name: fish | change shell
   user:
