update golang and add rust

--- a/playbooks/roles/compute/vars/main.yaml
+++ b/playbooks/roles/compute/vars/main.yaml
@@ -20,9 +20,11 @@ linux_software:
   - fuse-exfat # needs rpmfusion
   - python3-pip
   - xsel
+  - zlib-devel
 
 home_dir: "/home/{{ user }}"
 temp_dir: /tmp/readyup
+cargo_bin_dir: "{{ home_dir }}/.cargo/bin/"
 
 hack_url: "https://github.com/source-foundry/Hack/releases/download/v3.003/Hack-v3.003-ttf.zip"
-go_url: "https://dl.google.com/go/go1.11.linux-amd64.tar.gz"
+go_url: "https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz"
