--- a/playbooks/roles/compute/tasks/gnome.yaml
+++ b/playbooks/roles/compute/tasks/gnome.yaml
@@ -43,3 +43,9 @@
     value: "['e0b281e6-3542-4143-9131-b78559cdaf68']"
     state: present
   become: "{{ user }}"
+
+- name: gnome | install!
+  package:
+    name: "{{ item }}"
+    state: present
+  with_items: "{{ gnome_software }}"
