--- a/playbooks/roles/compute/files/tmux.conf
+++ b/playbooks/roles/compute/files/tmux.conf
@@ -14,7 +14,7 @@ bind "/" setw synchronize-panes
 set -s escape-time 0
 set -g status-bg blue
 set -g status-left ""
-set-window-option -g window-status-current-bg green
+# set-window-option -g window-status-current-bg green
 
 bind c new-window -c "#{pane_current_path}"
 bind "\\" split-window -hc "#{pane_current_path}"
