--- a/playbooks/roles/compute/tasks/vscode/debian.yaml
+++ b/playbooks/roles/compute/tasks/vscode/debian.yaml
@@ -1,6 +1,5 @@
 ---
 
 - name: vs code | install for debian
-  package:
-    name: code
-    state: present
+  apt:
+    deb: https://code.visualstudio.com/sha/download?build=stable&os=linux-deb-x64
