force download neovim src

--- a/playbooks/roles/compute/tasks/nvim/nvim.yaml
+++ b/playbooks/roles/compute/tasks/nvim/nvim.yaml
@@ -6,6 +6,7 @@
   git:
     repo: 'https://github.com/neovim/neovim.git'
     dest: "{{ home_dir }}/code/neovim"
+    force: true
   become_user: "{{ user }}"
 
 - name: nvim | setting owner to "{{ user }}"
